--- a/components/Background.module.css
+++ b/components/Background.module.css
@@ -1,8 +1,25 @@
 .Background {
     width: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .Sam {
-    height: 100%;
+    height: 60%;
     width: 100%;
+}
+
+.Heading {
+    font-family: 'Lato', sans-serif;
+    font-size: 1.5rem;
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #002855;
+    width: 50%;
+}
+
+.Info {
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    width: 50%;
 }
